# motosan-hyperliquid

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  llms.txt
.github/workflows/: ci-rust.yml  publish-rust.yml
crates/hl-account/: Cargo.toml  README.md
crates/hl-account/src/: account.rs  lib.rs
crates/hl-account/src/account/: mod.rs  parse.rs
crates/hl-account/tests/: integration_test.rs  live_test.rs
crates/hl-client/: Cargo.toml  README.md
crates/hl-client/src/: client.rs  lib.rs  rate_limit.rs  retry.rs  transport.rs  ws.rs
crates/hl-client/src/ws/: mod.rs  parse.rs  stream.rs  types.rs
crates/hl-client/tests/: live_test.rs  ws_integration_test.rs
crates/hl-executor/: Cargo.toml  README.md
crates/hl-executor/src/: executor.rs  lib.rs  meta_cache.rs  reconcile.rs
crates/hl-executor/src/executor/: admin.rs  cancel.rs  leverage.rs  mod.rs  modify.rs  orders.rs  response.rs  scale.rs  spot.rs  sub_account.rs  transfer.rs  twap.rs
crates/hl-executor/tests/: integration_test.rs  live_test.rs
crates/hl-market/: Cargo.toml  README.md
crates/hl-market/src/: lib.rs  market_data.rs
crates/hl-market/tests/: live_test.rs
crates/hl-signing/: Cargo.toml  README.md
crates/hl-signing/src/: adapter.rs  eip712.rs  lib.rs  private_key.rs  signer.rs
crates/hl-test-utils/: Cargo.toml
crates/hl-test-utils/src/: lib.rs
crates/hl-types/: Cargo.toml  README.md
crates/hl-types/benches/: parsing.rs
crates/hl-types/src/: account.rs  candle.rs  error.rs  lib.rs  market.rs  order.rs  response.rs  signature.rs  util.rs
crates/motosan-hyperliquid/: Cargo.toml  README.md
crates/motosan-hyperliquid/src/: lib.rs  prelude.rs
docs/superpowers/plans/: 2026-04-10-additional-actions.md  2026-04-10-exchange-actions.md  2026-04-10-performance-dx.md  2026-04-10-production-safety.md  2026-04-10-user-ws-events.md  2026-04-11-spot-trading-send-asset.md
docs/superpowers/specs/: 2026-04-10-additional-actions-design.md  2026-04-10-exchange-actions-design.md  2026-04-10-performance-dx-design.md  2026-04-10-production-safety-design.md  2026-04-10-user-ws-events-design.md  2026-04-11-spot-trading-send-asset-design.md
examples/: check_account.rs  place_order.rs  query_market.rs  shared_client.rs  trigger_order.rs  ws_stream.rs
skills/motosan-hyperliquid/: SKILL.md
skills/motosan-hyperliquid/references/: account.md  client.md  execution.md  market.md  release.md  signing.md  types.md
