[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
hl-types = { path = "crates/hl-types", version = "0.1.0" }
hl-signing = { path = "crates/hl-signing", version = "0.1.0" }
hl-client = { path = "crates/hl-client", version = "0.1.0" }
hl-market = { path = "crates/hl-market", version = "0.1.0" }
hl-account = { path = "crates/hl-account", version = "0.1.0" }
hl-executor = { path = "crates/hl-executor", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = "0.4"
