[package]
name = "hl-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hyperliquid REST and WebSocket client with retry and rate-limit handling"

[features]
default = []
ws = ["tokio-tungstenite", "futures-util"]

[dependencies]
hl-types.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["time", "sync", "macros", "net"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
futures-util = { version = "0.3", optional = true }
