[package]
name = "hl-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Hyperliquid REST and WebSocket client with retry and rate-limit handling"

[features]
default = []
ws = ["tokio-tungstenite", "tokio-util", "futures-util", "rand"]
live-test = []

[dependencies]
hl-types.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["time", "sync", "macros", "net"] }
tracing = "0.1"
async-trait.workspace = true
uuid = { version = "1", features = ["v4"] }
rand = { version = "0.8", optional = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
tokio-util = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
