[package]
name = "hl-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Hyperliquid order execution — place/cancel orders, trigger orders, position reconciliation"

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
hl-types.workspace = true
hl-signing.workspace = true
hl-client.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
async-trait.workspace = true
uuid = { version = "1", features = ["v4"] }
chrono.workspace = true
rust_decimal.workspace = true
