[package]
name = "hl-market"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hyperliquid market data — candles, orderbook, funding rates, asset info"

[dependencies]
hl-types.workspace = true
hl-client.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing = "0.1"
