[package]
name = "hl-market"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hyperliquid market data — candles, orderbook, funding rates, asset info"

[features]
default = []
live-test = ["hl-client/live-test"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
hl-types.workspace = true
hl-client.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing = "0.1"
rust_decimal.workspace = true
