[package]
name = "hl-market"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Hyperliquid market data — candles, orderbook, funding rates, asset info"

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hl-test-utils = { path = "../hl-test-utils" }

[dependencies]
hl-types.workspace = true
hl-client.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing = "0.1"
async-trait.workspace = true
rust_decimal.workspace = true
