[package]
name = "hl-signing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hyperliquid EIP-712 signing — Signer trait, PrivateKeySigner, action hashing"

[dependencies]
hl-types.workspace = true
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
motosan-wallet-core = { version = "0.5.0", features = ["hyperliquid"] }
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
