[package]
name = "hl-signing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Hyperliquid EIP-712 signing — Signer trait, PrivateKeySigner, action hashing"

[features]
default = ["k256-signer"]
k256-signer = ["dep:k256"]
live-test = []

[dependencies]
hl-types.workspace = true
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
sha3 = "0.10"
hex = "0.4"
motosan-wallet-core = { version = "0.5.0", features = ["hyperliquid"] }
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
