[package]
name = "hl-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hyperliquid domain types — orders, signatures, candles, accounts, errors"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
