[package]
name = "hl-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Hyperliquid domain types — orders, signatures, candles, accounts, errors"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parsing"
harness = false
