[package]
name = "motosan-hyperliquid"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unified facade crate for the motosan-hyperliquid SDK — re-exports all sub-crates behind feature flags"

[features]
default = ["full"]
market = ["dep:hl-market"]
account = ["dep:hl-account"]
executor = ["dep:hl-executor"]
signing = ["dep:hl-signing"]
ws = ["hl-client/ws"]
full = ["market", "account", "executor", "signing", "ws"]

[dependencies]
hl-types.workspace = true
hl-client.workspace = true
hl-market = { workspace = true, optional = true }
hl-account = { workspace = true, optional = true }
hl-executor = { workspace = true, optional = true }
hl-signing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rust_decimal.workspace = true

# Examples live in the workspace root (../../examples/) and are not included
# in the published crate. Run them via: cargo run --example <name> -p motosan-hyperliquid
